<resources>
    <string name="app_name">Holder8</string>
    <string name="login_name">请输入用户名（邮箱）</string>
    <string name="login_hint">请输入密码（%1$d–%2$d个字符）</string>
    <string name="reg_confirm">请再输入一次</string>
    <string name="log_in">登录</string>
    <string name="reg_in">注册</string>
    <string name="keepPassWord">记住密码</string>
    <string name="register">注册</string>
    <string name="onUserNameWrong">\n 用户名必须是邮箱地址</string>
    <string name="versions">Designed by Team\n\t\t\t\t\t\t\t\t\tHolder8™</string>
    <string name="logging">正在登陆中</string>
    <string name="onPassWordWrong">\n 密码错误</string>
    <string name="failedToLogin">登陆失败</string>
    <string name="onUserNameInvaild">用户名格式错误</string>
    <string name="onPassWordInvaild">\n 密码太长或太短，应为%1$d~%2$d位</string>
    <string name="onReInputWrong">\n 重复输入错误，请检查密码</string>
    <string name="onUserNameRepeat">\n 用户名重复且已被注册</string>
    <string name="regging">正在注册中</string>
    <string name="failedToReg">注册失败，请检查相关信息。</string>
    <string name="GuestMode">游客模式 ></string>
    <string name="LanguageChange">Language</string>
    <string name="bluet_unconnect">蓝牙设备没有连接</string>
    <string name="searchBluet">搜索蓝牙设备</string>
    <string name="searching">正在扫描……</string>
    <string name="sos">SOS</string>
</resources>
