<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:background="@drawable/logbackground"
                                             android:layout_height="match_parent">
    <EditText
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/log_userName"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:hint="@string/login_name" android:visibility="visible" android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.495" android:textColor="@android:color/background_light"/>
    <EditText
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:imeOptions="actionGo"
            android:id="@+id/log_passWord"
            android:singleLine="true"
            android:visibility="visible" android:selectAllOnFocus="true"
            android:textStyle="bold" android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="@+id/log_userName" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/log_userName" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:textColor="@android:color/background_light"
            app:layout_constraintHorizontal_bias="1.0"/>
    <Button
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:id="@+id/btn_login"
            android:text="@string/log_in"
            android:visibility="visible" android:background="@mipmap/login"
            android:textStyle="bold" android:textSize="30sp" android:typeface="monospace"
            android:textColor="@android:color/transparent"
            app:layout_constraintStart_toStartOf="@+id/log_passWord"
            app:layout_constraintBottom_toBottomOf="@+id/btn_reg" app:layout_constraintTop_toTopOf="@+id/btn_reg"/>
    <Button
            android:text="@string/register"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:id="@+id/btn_reg" android:textStyle="bold"
            android:textColor="@android:color/transparent" android:textSize="30sp"
            android:textAllCaps="false"
            android:background="@mipmap/reg"
            app:layout_constraintEnd_toEndOf="@+id/log_passWord"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/checkBox"
    />
    <CheckBox
            android:text="@string/keepPassWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox" android:textStyle="bold"
            android:textColor="@android:color/background_light"
            app:layout_constraintStart_toStartOf="@+id/log_passWord"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/log_passWord"/>
    <TextView
            android:text="@string/GuestMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_guest" android:textSize="18sp"
            android:typeface="sans"
            android:textColor="@android:color/background_light"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="36dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="36dp"/>
    <TextView
            android:text="登录"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textColor="@android:color/background_light" android:textSize="30sp"
            android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/tv_guest"
            app:layout_constraintStart_toStartOf="@+id/textView2"/>
    <TextView
            android:text="账号"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textColor="@android:color/background_light" android:textSize="18sp"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/log_userName"/>
    <TextView
            android:text="密码"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textColor="@android:color/background_light" android:textSize="18sp" android:layout_marginStart="4dp"
            app:layout_constraintStart_toStartOf="@+id/log_userName" android:layout_marginLeft="4dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/log_userName"/>
    <TextView
            android:text="忘记密码"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:textSize="18sp"
            android:textColor="@android:color/background_light"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="@+id/log_passWord" android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"/>
    <ImageView
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:visibility="visible" android:scaleType="centerInside"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@mipmap/weixin_icon"
            app:layout_constraintStart_toStartOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="@+id/btn_login"/>
    <ImageView
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:visibility="visible" android:scaleType="center"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@mipmap/qq_icon"
            app:layout_constraintStart_toStartOf="@+id/btn_reg" app:layout_constraintEnd_toEndOf="@+id/btn_reg"
    />
</android.support.constraint.ConstraintLayout>