<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:background="@drawable/regbackground"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passWord2"
            app:layout_constraintStart_toStartOf="@+id/reg_userName"
            app:layout_constraintEnd_toEndOf="@+id/reg_userName"
            android:singleLine="true"
            android:visibility="visible" android:selectAllOnFocus="true"
            android:textStyle="bold" android:textAllCaps="false" app:layout_constraintHorizontal_bias="0.0"
            android:textColor="@color/colorWhite" app:layout_constraintTop_toBottomOf="@+id/textView13"
            android:layout_marginTop="20dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/reg_userName"
            android:singleLine="true"
            android:visibility="visible" android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView11" android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="50dp"
            android:textColor="@color/colorWhite" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/reg_passWord"
            app:layout_constraintStart_toStartOf="@+id/reg_userName"
            app:layout_constraintEnd_toEndOf="@+id/reg_userName"
            android:singleLine="true"
            android:visibility="visible" android:selectAllOnFocus="true"
            android:textStyle="bold" android:textAllCaps="false" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/textView12"
            android:textColor="@color/colorWhite"/>
    <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/btn_regin"
            android:background="@mipmap/regdot"
            android:textSize="30sp" android:typeface="monospace"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="70dp" app:layout_constraintBottom_toBottomOf="parent" android:text=">"
            android:layout_marginEnd="40dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="40dp"/>
    <TextView
            android:text="@string/reg_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" android:layout_marginTop="70dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="50dp" android:layout_marginStart="50dp" android:textSize="40sp"
            android:textColor="@color/colorWhite"/>
    <TextView
            android:text="请填写您的基本信息"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" android:textColor="@color/colorWhite"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6"/>
    <TextView
            android:text="@string/login_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" android:layout_marginTop="10dp"/>
    <TextView
            android:text="@string/login_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12" android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="@+id/reg_userName"
            android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/reg_userName"/>
    <TextView
            android:text="@string/reg_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13" app:layout_constraintStart_toStartOf="@+id/reg_passWord"
            android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/reg_passWord"
            android:textColor="@color/colorWhite"/>
    <TextView
            android:text="紧急联系人（默认为120）"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView14" app:layout_constraintStart_toStartOf="@+id/passWord2"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/passWord2"
            android:textColor="@color/colorWhite" android:textSize="18sp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phoneInput"
            app:layout_constraintStart_toStartOf="@+id/textView14"
            app:layout_constraintEnd_toEndOf="@+id/passWord2"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/textView14"
            android:textColor="@color/colorWhite" android:textStyle="bold" android:singleLine="true"/>
</android.support.constraint.ConstraintLayout>